
 * [Mark Jansen] Use Capstone disassembler rather than LLVM.

 * [Mark Jansen] Support disassembling 16-bit x86 machine code.

 * [Mark Jansen] Don't update tools which aren't visible.

 * [Vincent Bermel] Unhardcode linux launcher icon file type.

 * Fix an uncommon use-after-free crash when closing tabs in diff window.

 * Support for disassembling 6800/68000 and MOS6502 instruction sets
   (requires recent Capstone version).

 * [Mark Jansen] Close document when tab is clicked with middle mouse button.

 * [Mark Jansen] Don't create .rehex-meta files when there is nothing to save.

 * Implement Strings tool to find and list ASCII strings in the file.

 * Add option to calculate automatic bytes per line in whole byte groups.

Version 0.2.0 (2020-06-02)

 * Allow copying comments from a document and pasting them elsewhere in the
   same document or into another one.

 * Fixed bounds check when clicking on nested comments in a document.

 * Added context menu when right clicking on a comment in a document.

 * Optionally highlight byte sequences which match the current selection.
   ("Highlight data matching selection" or "PatternMatchHighlight").

 * Allow copying cursor offset from document context menu.

 * Correctly display offsets over 4GiB in the status bar.

 * Display offsets as XXXX:XXXX rather than XXXXXXXX:XXXXXXXX when the file
   size is under 4GiB.

 * Add per-document option for dec/hex offset display.

 * When first byte after a comment is deleted, show that the comment was
   deleted rather than leaving phantom comment on screen until regions are
   repopulated.

 * Add side-by-side comparison of chunks of data from files. Select data and
   choose "Compare..." from context menu to open diff window.

 * Clean up search threads when a tab is closed while a search is running.

 * Display bytes which have been modified since the file was saved in red.

Version 0.1.0 (2020-03-12)

 * Initial release.