@@ -61,6 +61,7 @@ namespace REHex {
 			void OnRedo(wxCommandEvent &event);
 			void OnSelectAll(wxCommandEvent &event);
 			void OnSelectRange(wxCommandEvent &event);
+			void OnFillRange(wxCommandEvent &event);
 			void OnOverwriteMode(wxCommandEvent &event);
 			
 			void OnSetBytesPerLine(wxCommandEvent &event);
